static/styles/artist.css
.artist {
    position: relative;
    padding: 30px;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    height: 100%;
}

.artist .name {
    position: relative;
}


.artist .image {
    max-width: 30vw;
    margin-bottom: 10px;
}

.artist img {
    width: 100%;
    border-radius: 10px;
}

.details {
    width: 100%;
    display: flex;
    justify-content: flex-start;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 10px;
}

.details .section {
    background: hsla(0, 0%, 0%, 0.473);
    white-space: nowrap;
    flex: 1;
    border: 1px solid var(--primary);
    border-radius: 10px;
    padding: 10px;
}

.artist .details .title {
    text-align: start;
    color: var(--primary);
    margin-bottom: 10px;
    font-size: 20px;
}

.artist .banner {
    z-index: -1;
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: auto;
}

.locations {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.location .name {
    width: fit-content;
    max-width: calc(100% - 10px);
    border-bottom: var(--accent) 1px solid;
    font-style: italic;
}

.location .dates {
    padding: 10px;
    border-radius: 0 10px 10px 10px;
    background: var(--secondary);
}

.info {
    gap: 10px;
    width: 100%;
    display: flex;
    justify-content: flex-start;
}

